--- a/bbb-web.css
+++ b/bbb-web.css
@@ -84,3 +84,22 @@ text-align: center;
 padding-bottom: 15px;
 }
 
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  [class*="col-"] {
+    width: 100%;
+}
+}
+@media only screen and (max-width: 768px) {  
+h1.hero-title {
+font-family: 'Norican', cursive;
+position: absolute;
+text-align: center;
+top: 40%;
+padding-left: 8%;
+font-style: normal;
+font-size: 80px;
+line-height: 130%;
+color: #FFFFFF;
+}
+}
