--- a/bbb-web.css
+++ b/bbb-web.css
@@ -103,3 +103,38 @@ line-height: 130%;
 color: #FFFFFF;
 }
 }
+.collapsible {
+   background-color: #383434;
+   color: white;
+   cursor: pointer;
+   padding: 18px;
+   width: 100%;
+   border: none;
+   text-align: left;
+   outline: none;
+   font-size: 15px;
+   font-weight: bold;
+   font-family: 'Plus Jakarta Sans', sans-serif;
+ }
+ 
+ .active, .collapsible:hover {
+   background-color: #ffc107;
+   color: black;
+ }
+ 
+ .content {
+   padding: 0 18px;
+   max-height: 0;
+   overflow: hidden;
+   transition: max-height 0.2s ease-out;
+   background-color: #f1f1f1;
+   font-family: 'Plus Jakarta Sans', sans-serif;
+   
+ }
+ 
+ .display-6 {
+   font-family: 'Plus Jakarta Sans', sans-serif;
+   color: #f0f0f0;
+   padding: 50px;
+   font-size: 14px;
+ }
