--- a/bbb-web.css
+++ b/bbb-web.css
@@ -138,3 +138,23 @@ color: #FFFFFF;
    padding: 50px;
    font-size: 14px;
  }
+
+ .accordion-header {
+  font-family: 'Plus Jakarta Sans', sans-serif;
+   color: #f0f0f0;
+   padding: 50px;
+   font-size: 16px;
+   text-align: center;
+ }
+
+ .accordion-button {
+  background-color: #435e89;
+ }
+
+ .accordion-body {
+  color: #435e89;
+  background-color: #f0f0f0;
+  font-family: 'Plus Jakarta Sans', sans-serif;
+  font-size: 14px;
+  text-align: left;
+ }
