--- a/bbb-web.css
+++ b/bbb-web.css
@@ -88,7 +88,60 @@ font-family: 'Plus Jakarta Sans', sans-serif;
 font-size: 25px;
 color: white;
 text-align: center;
-padding-bottom: 15px;
+padding: 30px;
+}
+
+.row {
+  padding: 55px;
+}
+
+
+.collapsible {
+   background-color: #383434;
+   color: white;
+   cursor: pointer;
+   padding: 40px;
+   width: 100%;
+   border: none;
+   text-align: left;
+   outline: none;
+   font-size: 25px;
+   font-weight: bold;
+   font-family: 'Plus Jakarta Sans', sans-serif;
+ }
+ 
+.active, .collapsible:hover {
+   background-color: #ffc107;
+   color: black;
+ }
+ 
+ .content {
+   padding: 0px 25px;
+   max-height: 0;
+   overflow: hidden;
+   transition: max-height 0.2s ease-out;
+   background-color: #f1f1f1;
+   font-family: 'Plus Jakarta Sans', sans-serif; 
+   font-size: 25px;   
+}
+
+a:link {
+   color: black;
+   font-family: 'Plus Jakarta Sans', sans-serif;
+   font-size: 18px;   
+}
+
+a:visited {
+   color: #383434;
+   font-family: 'Plus Jakarta Sans', sans-serif;
+   font-size: 18px;   
+}
+
+
+a:hover {
+   color: #383434;
+   font-family: 'Plus Jakarta Sans', sans-serif;
+   font-size: 18px;   
 }
 
 @media only screen and (max-width: 768px) {
@@ -109,8 +162,14 @@ font-size: 80px;
 line-height: 130%;
 color: #FFFFFF;
 }
+
 .row {
   padding: 50px;
+}
+
+div {
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
 
 .collapsible {
@@ -118,11 +177,11 @@ color: #FFFFFF;
    color: white;
    cursor: pointer;
    padding: 50px;
-   width: 100%;
+   width: 75%;
    border: none;
    text-align: left;
    outline: none;
-   font-size: 18px;
+   font-size: 25px;
    font-weight: bold;
    font-family: 'Plus Jakarta Sans', sans-serif;
  }
@@ -133,12 +192,32 @@ color: #FFFFFF;
  }
  
  .content {
-   padding: 0 25px;
+   padding: 0px 25px;
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.2s ease-out;
    background-color: #f1f1f1;
-   font-family: 'Plus Jakarta Sans', sans-serif;
-   
+   font-family: 'Plus Jakarta Sans', sans-serif; 
+   font-size: 25px;
  }
+
+
+a:link {
+   color: black;
+   font-family: 'Plus Jakarta Sans', sans-serif;
+   font-size: 18px;   
+}
+
+a:visited {
+   color: #383434;
+   font-family: 'Plus Jakarta Sans', sans-serif;
+   font-size: 18px;   
+}
+
+
+a:hover {
+   color: #383434;
+   font-family: 'Plus Jakarta Sans', sans-serif;
+   font-size: 18px;   
+}
 }
